--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="robots" content="index, follow">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-	<title>Document</title>
-	
+	<title>Детский отдых</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="fonts/Circe/stylesheet.css">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.css">  
 </head>
