--- a/app/index.html
+++ b/app/index.html
@@ -1,31 +1,89 @@
 <!DOCTYPE html>
-<html lang="ru"> 
-<head>  
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="keywords" content="Ключи">
-  <meta name="description" content="Описание">
-  <meta name="theme-color" content="#232323">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="robots" content="index, follow">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<title>Детский отдых</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="fonts/Circe/stylesheet.css">
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/style.css">  
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Ключи">
+    <meta name="description" content="Описание">
+    <meta name="theme-color" content="#232323">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="robots" content="index, follow">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title>Детский отдых</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/Circe/stylesheet.css">
+    <link rel="stylesheet" href="css/libs.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<!--[if lt IE 8]>
+    <!--[if lt IE 8]>
 <p class="browserupgrade">Вы используете <strong>устаревшую</strong> версию браузера. Пожалуйста <a href="http://browsehappy.com/">обновите свой браузер</a>.</p>
 <![endif]-->
-	
+	<div class="header-top">
+		<div class="container">
+			<div class="header-top__inner">
+				<div class="logo">
+					<img src="images/logo/logo.png" alt="Логотип">
+					<div class="logo__info">Лучшие детские курорты и маршруты</div>
+				</div>
+				<div class="header-top__contacts">
+					Есть вопросы? - звоните 
+					<a href="tel:88182208010">+7 (8182) 20-80-10</a>
+					<a href="tel:89600028010"> +7 (960) 002-80-10</a>
+				</div>
+				<button type="submit" class="btn btn--style">ОБРАТНЫЙ ЗВОНОК</button>
+			</div>	
+		</div>
+	</div>
+	<header class="header">
+		
+			<div class="header__inner">
+				<div class="header__box">
+					<div class="header__title">Детский отдых </div>
+					<div class="header__subtitle">Путевки в лучшие лагеря по ценам ниже рынка на 20%</div>
+					<div class="header__textBox textBox">
+						<div class="textBox__inner">
+							<div class="textBox__img"><img src="images/icon/shield.png" alt=""></div>
+							<div class="textBox-wrap">
+								<div class="textBox__title">Мы сотрудничаем только с лицензированными лагерями, прошедшими проверку контролирующими органами </div>
+								<div class="textBox__subtitle">Наши дети в безопасности</div>	
+							</div>
+						</div>
+						<div class="textBox__inner">
+							<div class="textBox__img"><img src="images/icon/wallet.png" alt=""></div>
+							<div class="textBox-wrap">
+								<div class="textBox__title">Путевки частично оплачиваются из бюджета</div>
+								<div class="textBox__subtitle">Вся информация и документы в офисе</div>	
+							</div>
+						</div>
+						<div class="textBox__inner">
+							<div class="textBox__img"><img src="images/icon/girl.png" alt=""></div>
+							<div class="textBox-wrap">
+								<div class="textBox__title">Профессиональные вожатые и педагоги с опытом работы в лагерях от 3 до 30 лет </div>
+								<div class="textBox__subtitle">Во время отдыха педагоги всегда на связи</div>	
+							</div>
+						</div>
+					</div>		
+				</div>
+				<div class="header__box-img"><img src="images/bg/header_foto_bg.pngs" alt=""></div>
+			</div>
+			
+		
+
+	</header>
 
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/libs.min.js"></script>
-	<script src="js/main.js"></script>
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/libs.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
