--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 	<header class="header">
-		
+		<div class="container-fluid container-fluid--style-r">
 			<div class="header__inner">
 				<div class="header__box">
 					<div class="header__title">Детский отдых </div>
@@ -68,12 +68,36 @@
 						</div>
 					</div>		
 				</div>
-				<div class="header__box-img"><img src="images/bg/header_foto_bg.pngs" alt=""></div>
-			</div>
-			
-		
-
+				<div class="header__box-img"></div>	
+			</div>	
+		</div>
 	</header>
+
+	<section class="consultation">
+		<div class="container-fluid">
+			<div class="consultation__inner">
+				<div class="l-foto"></div>
+				<div class="consultation-bl-right">
+					<div class="consultation_wrap">
+						<div class="consultation-textWrap">
+							<div class="consultation__title">Мы готовы дать Вам подробную консультацию</div>
+							<div class="consultation__subtitle">Поможем правильно подобрать путевку для Вашего ребенка под любой бюджет!</div>	
+						</div>	
+					</div>	
+					<form class="form">
+						<div class="form__info">Для этого заполните форму ниже - мы перезвоним Вам за 60 секунд</div>
+						<div class="form-wrap">
+							<input type="text" placeholder="Ваше имя">	
+							<input type="tel" placeholder="Ваш телефон">
+							<input class="btn" type="submit" value="Получить консультацию">
+						</div>
+						<div class="form__phone">или перезвоните нам по телефону: <span>+7 (8182) 20-80-10 </span></div>
+					</form>	
+				</div>
+				
+			</div>
+		</div>
+	</section>
 
 
 
